k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paklawchatbot
  labels:
    app: paklawchatbot
